fix: logs, configs etc